--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
       color: rgb(236, 236, 236);
     }
 
+    .timer {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+
     .alert {
       -webkit-animation: blink 1s infinite;
       -moz-animation: blink 1s infinite;
